--- a/package.json
+++ b/package.json
@@ -1,12 +1,8 @@
 {
-  "name": "rxjs-backend",
-  "version": "1.0.0",
-  "main": "server.js",
-  "scripts": {
-    "prestart": "npm install",
-    "start": "node server.js",
-    "watch": "forever -w server.js"
-  },
+    "type": "module",
+    "scripts": {
+      "start": "node server.js"
+    },
   "dependencies": {
     "cors": "^2.8.5",
     "debug": "^4.3.4",
